--- a/basic_structure.html
+++ b/basic_structure.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>HTML Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
+    <style type="text/css">
       body {
         width: 100% !important;
         -webkit-text-size-adjust: 100%;
@@ -42,24 +42,9 @@
   </head>
 
   <body style="margin: 0; padding: 0">
-    <div
-      style="
-        font-size: 0px;
-        font-color: #ffffff;
-        opacity: 0;
-        visibility: hidden;
-        width: 0;
-        height: 0;
-        display: none;
-      "
-    >
+    <div style="font-size: 0px; font-color: #ffffff; opacity: 0; visibility: hidden; width: 0; height: 0; display: none">
       Тестовое письмо
     </div>
-    <table
-      cellpadding="0"
-      cellspacing="0"
-      width="100%"
-      bgcolor="#ededed"
-    ></table>
+    <table cellpadding="0" cellspacing="0" width="100%" bgcolor="#ededed"></table>
   </body>
 </html>
